hw5_lab8/tests/errors/sem_undeclared_fn.kt
// EXPECT: semantic error — call to undeclared function
fun main() {
    val x = doesNotExist(1, 2)
}
